[package]
name = "routeros-utils"
version = "0.1.0"
authors = ["Adam Batkin <adam@batkin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
routeros_rust = { path = "/home/abatkin/code/Mikrotik-rust" }  # "0.0.21"
structopt = "0.3.2"
prettytable-rs = "^0.8"
rental = "0.5.5"